--- a/app/src/main/res/layout/hotel_item.xml
+++ b/app/src/main/res/layout/hotel_item.xml
@@ -1,16 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="wrap_content"
+    xmlns:card_view="http://schemas.android.com/tools"
     android:background="@color/colorPrimaryDark"
+    card_view:cardElevation="3dp"
+    card_view:cardCornerRadius="4dp"
+    android:layout_marginTop="16dp"
+    android:layout_marginEnd="16dp"
+    android:layout_marginStart="16dp"
     android:layout_height="wrap_content">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cardViewContentContainer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+
+        <ImageView
+            android:id="@+id/hotelImage"
+            android:layout_width="0dp"
+            android:layout_height="60dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:adjustViewBounds="true"
+            app:layout_constraintStart_toStartOf="parent"/>
 
 
     <TextView
-        android:id="@+id/hotelItemName"
-        android:layout_width="wrap_content"
+        android:id="@+id/hotelCity"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:textColor="#ffff"
-        android:gravity="center_vertical"/>
-</LinearLayout>
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="16dp"
+        android:text="Porto de Galinhas"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@+id/hotelImage"
+        app:layout_constraintEnd_toEndOf="@+id/middle_guideline"
+        app:layout_constraintStart_toStartOf="@+id/cardViewContentContainer" />
+
+        <TextView
+            android:id="@+id/hotelOldPrice"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginStart="16dp"
+            android:text="R$ 1000,00"
+            app:layout_constraintTop_toBottomOf="@+id/hotelImage"
+            app:layout_constraintEnd_toEndOf="@+id/cardViewContentContainer" />
+
+        <TextView
+            android:id="@+id/hotelCurrentPrice"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="R$ 500,00"
+            app:layout_constraintTop_toBottomOf="@+id/hotelOldPrice"
+            app:layout_constraintEnd_toEndOf="@+id/hotelOldPrice"
+            app:layout_constraintStart_toStartOf="@+id/hotelOldPrice"/>
+
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/hotelCurrentPrice"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/middle_guideline"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.5"/>
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.cardview.widget.CardView>
