:construction: Adicionando finalizando logica de apresentacao da home, melhoria em detalhe do loading

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -15,9 +15,9 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/hotelsRecyclerView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_marginTop="16dp"
-            android:visibility="gone"
+            android:visibility="visible"
             app:layout_constraintTop_toTopOf="parent" />
 
 
